argocd/media-server/tautulli/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tautulli
  name: tautulli
spec:
  ports:
    - name: http
      port: 8181
      targetPort: 8181
  selector:
    app: tautulli
