argocd/media-server/tautulli/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Tautulli
    gethomepage.dev/icon: tautulli
    gethomepage.dev/description: "A python based web application for monitoring, analytics\
      \ and notifications for Plex Media Server."
    gethomepage.dev/pod-selector: app=tautulli
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - tautulli.yanello.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: tautulli
          port: 8181
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli-images
spec:
  parentRefs:
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - tautulli.yanello.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/image"
      backendRefs:
        - name: tautulli
          port: 8181
